# schloss

./: .ghci  LICENSE  README.md  cabal.project  cabal.project.freeze  cabal.project.local  default.nix  fixtures.sql  graph.sql  hasql-notifications.nix  hie.yaml  schema.sql  schloss.cabal  schloss.nix
.github/workflows/: ci.yaml
app/: Main.hs
example/: simple.hs
src/: Ideas.hs  Main.hs  SSE.hs  Schloss.hs
tests/: Main.hs
