name:                schloss
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Florian Klein
maintainer:          florian.klein@free.fr
build-type:          Simple
cabal-version:       >=2.0

executable schloss
  default-language: Haskell2010
  default-extensions: AllowAmbiguousTypes
                    , ApplicativeDo
                    , BlockArguments
                    , DataKinds
                    , DefaultSignatures
                    , DeriveAnyClass
                    , DeriveDataTypeable
                    , DeriveFoldable
                    , DeriveFunctor
                    , DeriveGeneric
                    , DeriveTraversable
                    , DerivingStrategies
                    , DerivingVia
                    , DisambiguateRecordFields
                    , DuplicateRecordFields
                    , EmptyCase
                    , FlexibleContexts
                    , FlexibleInstances
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , InstanceSigs
                    , KindSignatures
                    , LambdaCase
                    , LiberalTypeSynonyms
                    , MultiParamTypeClasses
                    , NamedFieldPuns
                    , NoMonomorphismRestriction
                    , NumericUnderscores
                    , OverloadedStrings
                    , ParallelListComp
                    , PartialTypeSignatures
                    , PolyKinds
                    , QuasiQuotes
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TransformListComp
                    , TypeApplications
                    , TypeFamilies
                    , TypeFamilyDependencies
                    , TypeOperators
                    , TypeSynonymInstances
                    , UndecidableInstances

  -- ghc-options: -Wall -fwarn-missing-signatures

  hs-source-dirs: src
  main-is: Main.hs

  mixins: base hiding (Prelude)
        , relude (Relude as Prelude)

  build-depends: base
               , aeson
               , async
               , bytestring
               , fast-logger
               , generic-optics
               , generics-sop
               , hasql
               , hasql-generic
               , hasql-notifications
               , hasql-pool
               , hasql-queue
               , hasql-th
               , hasql-transaction
               , hkd-lens
               , http-media
               , http-types
               , mtl
               , lens
               , one-liner
               , optics-core
               , postgresql-binary
               , relude
               , req
               , resource-pool
               , servant
               , servant-server
               , siren-json
               , text
               , time
               , transformers
               , uuid
               , valor
               , vector
               , wai
               , wai-extra
               , warp
               -- , postgresql-libpq
               -- , profunctors
               -- , resourcet
