name:                schloss
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Florian Klein
maintainer:          florian.klein@free.fr
build-type:          Simple
cabal-version:       >=2.0

executable schloss

  hs-source-dirs: src
  main-is: Main.hs

  ghc-options:
    -threaded
    "-with-rtsopts=-N"
    -- -Wall
    -- -fwarn-missing-signatures

  -- ghc-prof-options:
  --     -fprof-auto
  --     "-with-rtsopts=-N -p -s -hy -i0.1"
  --     -debug
  --     -g

  default-language: Haskell2010
  default-extensions: AllowAmbiguousTypes
                    , ApplicativeDo
                    , BlockArguments
                    , ConstraintKinds
                    , DataKinds
                    , DefaultSignatures
                    , DeriveAnyClass
                    , DeriveDataTypeable
                    , DeriveFoldable
                    , DeriveFunctor
                    , DeriveGeneric
                    , DeriveTraversable
                    , DerivingStrategies
                    , DerivingVia
                    , DisambiguateRecordFields
                    , DuplicateRecordFields
                    , EmptyCase
                    , FlexibleContexts
                    , FlexibleInstances
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , InstanceSigs
                    , KindSignatures
                    , LambdaCase
                    , LiberalTypeSynonyms
                    , MultiParamTypeClasses
                    , NamedFieldPuns
                    , NoMonomorphismRestriction
                    , NumericUnderscores
                    , OverloadedStrings
                    , ParallelListComp
                    , PartialTypeSignatures
                    , PolyKinds
                    , QuasiQuotes
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TransformListComp
                    , TypeApplications
                    , TypeFamilies
                    , TypeFamilyDependencies
                    , TypeOperators
                    , TypeSynonymInstances
                    , UndecidableInstances

  mixins: base hiding (Prelude)
        , relude (Relude as Prelude)

  build-depends: base
               , aeson
               , async
               , bytestring
               -- , exinst
               , fast-logger
               , generic-optics
               , generics-sop
               , hasql
               , hasql-generic
               , hasql-notifications
               , hasql-pool
               -- , hasql-queue
               , hasql-th
               , hasql-transaction
               -- , hkd-lens
               , http-client
               , http-client-tls
               , http-conduit
               , http-media
               , http-types
               , mtl
               , lens
               , lifted-base
               -- , one-liner
               , optics-core
               , postgresql-binary
               , relude
               -- , req
               -- , resource-pool
               , servant
               , servant-client
               , servant-client-core
               , servant-server
               -- , siren-json
               , text
               , time
               , transformers
               , read-env-var
               , uuid
               , valor
               , vector
               , wai
               , wai-extra
               , warp
               , postgresql-libpq
               -- , profunctors
               -- , resourcet
